--- a/first.html
+++ b/first.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Revalia&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/WD.svg">
     <title>Web Design</title>
 </head>
 
@@ -30,36 +31,182 @@
             </nav>
         </section>
     </header>
+
     <section class="header">
         <div class="wrap promo-wrap">
-            <a class="laptop">
-                <img src="img/Frame.svg" alt="LapTop">
-            </a>
-            <div class="header-text">
+            <p class="laptop">
+                <img src="img/Laptop.svg" alt="LapTop">
+            </p>
+            <div class="design-text">
                 <h1 class="promo-title">
                     <p class="text-head">Дизайн и верстка</p>
-                    <p class="text">
-                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
-                        стандартной "рыбой" для текстов на латинице с начала XVI века.
-                    </p>
                 </h1>
+                <p class="text">
+                    Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
+                    стандартной "рыбой" для текстов на латинице с начала XVI века.
+                </p>
                 <button class="type-me-btn text">
                     НАПИСАТЬ МНЕ
                 </button>
             </div>
         </div>
     </section>
-    <section class="about-me">
-        <div class="about-me-div">
-            <h1 class="promo-title">
-                <p class="text-head text-head-about-me">Обо мне</p>
-                <p class="text-about-me">
+
+    <main>
+        <section class="about-me center">
+            <div>
+                <h2 class="text-head-about-me">
+                    Обо мне
+                </h2>
+                <p class="text text-about-me">
                     Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
                     стандартной "рыбой" для текстов на латинице с начала XVI века.
                 </p>
-            </h1>
-        </div>
-    </section>
+            </div>
+        </section>
+
+        <section class="projects">
+            <div class="project-item">
+                <p class="project-img">
+                    <img src="img/project.svg" alt="Project">
+                </p>
+                <h3 class="text-head head-project-text">
+                    40+
+                    <br>
+                    <p class="text project-text">
+                        проектов
+                    </p>
+                </h3>
+            </div>
+            <div class="project-item">
+                <p class="project-img">
+                    <img src="img/project.svg" alt="Project">
+                </p>
+                <h3 class="text-head head-project-text">
+                    40+
+                    <br>
+                    <p class="text project-text">
+                        проектов
+                    </p>
+                </h3>
+            </div>
+            <div class="project-item">
+                <p class="project-img">
+                    <img src="img/project.svg" alt="Project">
+                </p>
+                <h3 class="text-head head-project-text">
+                    40+
+                    <br>
+                    <p class="text project-text">
+                        проектов
+                    </p>
+                </h3>
+            </div>
+            <div class="project-item">
+                <p class="project-img">
+                    <img src="img/project.svg" alt="Project">
+                </p>
+                <h3 class="text-head head-project-text">
+                    40+
+                    <br>
+                    <p class="text project-text">
+                        проектов
+                    </p>
+                </h3>
+            </div>
+            <div class="project-item">
+                <p class="project-img">
+                    <img src="img/project.svg" alt="Project">
+                </p>
+                <h3 class="text-head head-project-text">
+                    40+
+                    <br>
+                    <p class="text project-text">
+                        проектов
+                    </p>
+                </h3>
+            </div>
+            <div class="project-item">
+                <p class="project-img">
+                    <img src="img/project.svg" alt="Project">
+                </p>
+                <h3 class="text-head head-project-text">
+                    40+
+                    <br>
+                    <p class="text project-text">
+                        проектов
+                    </p>
+                </h3>
+            </div>
+        </section>
+
+        <section class="skills">
+            <div class="my-skills-photoshop">
+                <h2 class="my-skills-header text-head">
+                    Мои навыки <br>
+                </h2>
+                <p class="photoshop text">
+                    Adobe Photoshop <br>
+                    <img src="img/skills.svg" alt="Photoshop">
+                </p>
+                <p class="photoshop text">
+                    Adobe Photoshop <br>
+                    <img src="img/skills.svg" alt="Photoshop">
+                </p>
+                <p class="photoshop text">
+                    Adobe Photoshop <br>
+                    <img src="img/skills.svg" alt="Photoshop">
+                </p>
+            </div>
+            <div class="my-skills-img">
+                <img src="img/Photo-skill.png" alt="Photo">
+            </div>
+        </section>
+
+        <section class="work">
+            <figure class="video-work">
+                <figcaption class="caption-how-work">
+                    <h2 class="how-work-head text-head-about-me">
+                        Как я работаю
+                    </h2>
+                    <p class="how-work-text text-about-me text">
+                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
+                        стандартной "рыбой" для текстов на латинице с начала XVI века.
+                    </p>
+                </figcaption>
+                <img class="video-img" src="img/Video.svg" alt="Video">
+            </figure>
+        </section>
+
+        <section class="table-proj">
+            <div class="card-item">
+                <figure class="table-fig">
+                    <img src="img/Table-proj-1.svg" alt="Photo">
+                </figure>
+                <figure class="table-fig">
+                    <img src="img/Table-proj-2.svg" alt="Photo">
+                </figure>
+                <figure class="table-fig">
+                    <img src="img/Table-proj-1.svg" alt="Photo">
+                </figure>
+                <figure class="table-fig">
+                    <img src="img/Table-proj-2.svg" alt="Photo">
+                </figure>
+                <figure class="table-fig">
+                    <img src="img/Table-proj-1.svg" alt="Photo">
+                </figure>
+                <figure class="table-fig">
+                    <img src="img/Table-proj-2.svg" alt="Photo">
+                </figure>
+                <figure class="table-fig">
+                    <img src="img/Table-proj-1.svg" alt="Photo">
+                </figure>
+                <figure class="table-fig">
+                    <img src="img/Table-proj-2.svg" alt="Photo">
+                </figure>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
