Добавлен блок отправки

--- a/first.html
+++ b/first.html
@@ -53,7 +53,7 @@
     </section>
 
     <main>
-        <section class="about-me center">
+        <section class="about-me">
             <div>
                 <h2 class="text-head-about-me">
                     Обо мне
@@ -204,6 +204,48 @@
                 <figure class="table-fig">
                     <img src="img/Table-proj-2.svg" alt="Photo">
                 </figure>
+            </div>
+        </section>
+
+        <section class="company">
+            <div class="microsoft-img">
+                <img src="img/Mcrsft.png" alt="Microsoft corp.">
+            </div>
+            <div class="microsoft-img">
+                <img src="img/Mcrsft.png" alt="Microsoft corp.">
+            </div>
+            <div class="microsoft-img">
+                <img src="img/Mcrsft.png" alt="Microsoft corp.">
+            </div>
+            <div class="microsoft-img">
+                <img src="img/Mcrsft.png" alt="Microsoft corp.">
+            </div>
+        </section>
+
+        <section class="send-application">
+            <div class="send-application-text">
+                <h2 class="send-app-text-head text-head">
+                    Хотите веб-сайт? <br>
+                </h2>
+                <p class="send-app-text text-about-me text">
+                    Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
+                    стандартной "рыбой" для текстов на латинице с начала XVI века.
+                </p>
+            </div>
+            <div class="input-form">
+                <form class="form">
+                    <input class="name-form text" type="text" id="name" name="user_name" value="Ваше имя" required>
+                    <input class="email-form text" type="email" id="mail" name="user_mail" value="Ваш E-Mail" required>
+                    <br>
+                </form>
+                <form class="form">
+                    <textarea class="textarea-form text" id="msg" name="user_message">Сообщение</textarea>
+                </form>
+            </div>
+            <div class="send-app-btn">
+                <button class="send-btn type-me-btn text" type="submit">
+                    ОТПРАВИТЬ
+                </button>
             </div>
         </section>
     </main>
